package jklol.models;

import "Variable.proto";
import "FactorGraph.proto";

option java_package = "com.jayantkrish.jklol.models.dynamic";
option java_outer_classname = "DynamicFactorGraphProtos";

message PlateFactorProto {
  enum Type {
    UNKNOWN = 0;
    REPLICATED = 1;
  }

  optional Type type = 1 [default = UNKNOWN];

  // Mandatory if type = REPLICATED
  optional ReplicatedFactorProto replicated_factor = 2;
}

message ReplicatedFactorProto {
  // The factor that gets replicated.
  optional FactorProto factor = 1;

  // A pattern that determines where each factor replication
  // occurs in the model.
  optional VariablePatternProto pattern = 2;
}

message DynamicFactorGraphProto {
  // The distinct types of variables in this factor graph. 
  // Each variable type may occur more than once in the graph,
  // assigned to distinct variable numbers.
  repeated VariableProto variable_type = 1;
  
  // The set of variables in the factor graph, which may
  // change depending on the assignment.
  optional DynamicVariableSetProto variables = 2;

  // The (replicated) factors in the graph.
  repeated PlateFactorProto factor = 3;
}